book/tests/snapshots/snapshot__run_display_reference_prql@internals__functional-lang-2.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/internals/functional-lang-2.prql
---
filter age > 50 (
  from employees
)
sort name



