book/tests/snapshots/snapshot__run_display_reference_prql@internals__functional-lang-3.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/internals/functional-lang-3.prql
---
sort name (
  filter age > 50 (
  from employees
)
)



